tests/valid/23_print_1_a_100.patito
programa print1a100;
vars i : entero;

inicio
{
    i = 1;
    mientras (i < 101) haz {
        escribe(i);
        i = i + 1;
    } ;
}
fin
