tests/invalid/08_factor_vacio.patito
programa factorVacio;
vars
    x : entero;
inicio
{
    x = 1 + ;
}
fin
